--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <embed src="https://github.com/Plovmmm/modul/blob/main/%D0%90%D0%A0%D0%A5%D0%B8%D0%A1_%D0%9C%D0%BE%D0%B4%D1%83%D0%BB%D1%8C%D0%9C%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F_3374_%D0%93%D1%80%D0%B5%D0%BD%D0%B0%D0%B4%D0%B5%D1%80%D0%BE%D0%B2%D0%B0_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D0%BA%D0%B0%D1%8F%20(2).pdf" type="application/pdf" width="100%" height="100%">
+        <embed src=" " type="application/pdf" width="100%" height="100%">
     </div>
 </body>
 </html>
